[project]
name = "SMHviz_layout"
version = "0.0.2.9000"
authors = [
  { name="Lucie Contamin", email="contamin@pitt.edu" },
]
description = "SMH package for visualization - layout of the Dash Websites"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "dash>=2.7.0",
    "pandas>=1.5.2",
    "dash_bootstrap_components"
]